--- a/DigDug/DigDug/DigDug.vcxproj.filters
+++ b/DigDug/DigDug/DigDug.vcxproj.filters
@@ -34,7 +34,7 @@
       <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="SceneGame.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -54,7 +54,7 @@
       <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="SceneGame.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
