--- a/DigDug/DigDug/DigDug.vcxproj.filters
+++ b/DigDug/DigDug/DigDug.vcxproj.filters
@@ -16,45 +16,87 @@
     <Filter Include="Scene">
       <UniqueIdentifier>{ae78da53-1ee4-4627-83ce-d6f196c557f8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Stages">
+      <UniqueIdentifier>{4a713ee1-cf55-48dc-a53e-11fe79e5a0a6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Stages\cpp">
+      <UniqueIdentifier>{a49b6547-0ecf-472e-893d-ddb12f4a0e9e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Stages\h">
+      <UniqueIdentifier>{d8a0424c-1ab0-4108-8aff-dba44f78ccf6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene\cpp">
+      <UniqueIdentifier>{459fa0ce-e2df-4498-acd5-8683fbf3bf51}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene\h">
+      <UniqueIdentifier>{e5a6b9d6-632e-4f0c-ac1d-0716b0dace69}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main">
+      <UniqueIdentifier>{27201824-52da-4c98-a4a4-f0d04f937bf2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\cpp">
+      <UniqueIdentifier>{588ae123-49d7-4a23-9535-e9e789793756}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\h">
+      <UniqueIdentifier>{bc5e6244-ab03-43e8-b78c-a6bfc53fa868}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Entry.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Stage1.cpp">
+      <Filter>Stages\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneGame.cpp">
+      <Filter>Scene\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>Scene\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneTitle.cpp">
+      <Filter>Scene\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="GameController.cpp">
+      <Filter>Main\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="GameFrame.cpp">
+      <Filter>Main\cpp</Filter>
+    </ClCompile>
     <ClCompile Include="System.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="GameController.cpp">
+    <ClCompile Include="ConsoleWindow.cpp">
       <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneManager.cpp">
-      <Filter>Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneTitle.cpp">
-      <Filter>Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneGame.cpp">
-      <Filter>Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Stage1.h">
+      <Filter>Stages\h</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneBase.h">
+      <Filter>Scene\h</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneGame.h">
+      <Filter>Scene\h</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.h">
+      <Filter>Scene\h</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneTitle.h">
+      <Filter>Scene\h</Filter>
+    </ClInclude>
+    <ClInclude Include="GameController.h">
+      <Filter>Main\h</Filter>
+    </ClInclude>
+    <ClInclude Include="GameFrame.h">
+      <Filter>Main\h</Filter>
+    </ClInclude>
     <ClInclude Include="System.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="GameController.h">
+    <ClInclude Include="ConsoleWindow.h">
       <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneBase.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneManager.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneTitle.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneGame.h">
-      <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
