--- a/DigDug/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug/DigDug.vcxproj
@@ -88,6 +88,10 @@
     <ClCompile Include="Entry.cpp" />
     <ClCompile Include="GameFrame.cpp" />
     <ClCompile Include="GameController.cpp" />
+    <ClCompile Include="PlayerBase.cpp" />
+    <ClCompile Include="PlayerManager.cpp" />
+    <ClCompile Include="PlayerRender.cpp" />
+    <ClCompile Include="PlayerUpDater.cpp" />
     <ClCompile Include="SceneGame.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="SceneTitle.cpp" />
@@ -98,6 +102,10 @@
     <ClInclude Include="ConsoleWindow.h" />
     <ClInclude Include="GameFrame.h" />
     <ClInclude Include="GameController.h" />
+    <ClInclude Include="PlayerBase.h" />
+    <ClInclude Include="PlayerManager.h" />
+    <ClInclude Include="PlayerRender.h" />
+    <ClInclude Include="PlayerUpDater.h" />
     <ClInclude Include="SceneBase.h" />
     <ClInclude Include="SceneGame.h" />
     <ClInclude Include="SceneManager.h" />
