穴が掘れるようになった

--- a/DigDug/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug/DigDug.vcxproj
@@ -88,6 +88,11 @@
     <ClCompile Include="Entry.cpp" />
     <ClCompile Include="GameFrame.cpp" />
     <ClCompile Include="GameController.cpp" />
+    <ClCompile Include="KeyCommandA.cpp" />
+    <ClCompile Include="KeyCommandD.cpp" />
+    <ClCompile Include="KeyCommandNull.cpp" />
+    <ClCompile Include="KeyCommandS.cpp" />
+    <ClCompile Include="KeyCommandW.cpp" />
     <ClCompile Include="PlayerBase.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="PlayerRender.cpp" />
@@ -102,6 +107,12 @@
     <ClInclude Include="ConsoleWindow.h" />
     <ClInclude Include="GameFrame.h" />
     <ClInclude Include="GameController.h" />
+    <ClInclude Include="KeyCommand.h" />
+    <ClInclude Include="KeyCommandA.h" />
+    <ClInclude Include="KeyCommandD.h" />
+    <ClInclude Include="KeyCommandNull.h" />
+    <ClInclude Include="KeyCommandS.h" />
+    <ClInclude Include="KeyCommandW.h" />
     <ClInclude Include="PlayerBase.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="PlayerRender.h" />
