--- a/DigDug/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug/DigDug.vcxproj
@@ -85,6 +85,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleWindow.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyBase.cpp" />
+    <ClCompile Include="EnemyManager.cpp" />
     <ClCompile Include="Entry.cpp" />
     <ClCompile Include="GameFrame.cpp" />
     <ClCompile Include="GameController.cpp" />
@@ -105,6 +108,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleWindow.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyBase.h" />
+    <ClInclude Include="EnemyManager.h" />
+    <ClInclude Include="Spawner.h" />
     <ClInclude Include="GameFrame.h" />
     <ClInclude Include="GameController.h" />
     <ClInclude Include="KeyCommand.h" />
@@ -121,6 +128,7 @@
     <ClInclude Include="SceneGame.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="SceneTitle.h" />
+    <ClInclude Include="SpawnerFor.h" />
     <ClInclude Include="Stage1.h" />
     <ClInclude Include="System.h" />
   </ItemGroup>
